[package]
name = "ptools2"
version = "0.1.0"
authors = ["John Gallagher"]
license = "Apache-2.0"
description = "Utilities for inspecting Linux processes"
readme = "README.md"

[lib]
name = "ptools2"
path = "src/ptools2.rs"

[[bin]]
name = "pargs2"
path = "src/bin/pargs2.rs"
[[bin]]
name = "penv2"
path = "src/bin/penv2.rs"
[[bin]]
name = "pfiles2"
path = "src/bin/pfiles2.rs"
[[bin]]
name = "ptree2"
path = "src/bin/ptree2.rs"

[[bin]]
name = "epoll_example"
path = "src/bin/testing/epoll.rs"
[[bin]]
name = "netlink_example"
path = "src/bin/testing/netlink.rs"

[profile.release]
debug = true
lto = true
panic = "abort" # Save size. We don't need unwinding anyway.
# TODO is there any way to remove the ability to display backtraces? This would
# likely shave another 50K or so off the binary size, and may not be necessary
# if systems are typically configured to dump core on SIGABRT

[dependencies]
getopts = "0.2.15"
nix = "0.12.0"
libc = "0.2.48"

[package.metadata.deb]
maintainer = "Delphix Engineering <eng@delphix.com>"
section = "debug"
copyright = "2018, 2020 Delphix"

extended-description = """\
A collection of utilities for inspecting the state of processes, modeled \
after the tools by the same name which exist on Solaris/Illumos."""

separate-debug-symbols = true
assets = [
  # List files we want explicitly so that we don't get the binaries intended for
  # testing.
  ["target/release/pargs2", "usr/bin/", "755"],
  ["target/release/penv2", "usr/bin/", "755"],
  ["target/release/pfiles2", "usr/bin/", "755"],
  ["target/release/ptree2", "usr/bin/", "755"],
]
